hphp/test/zend/bad/ext/standard/tests/general_functions/bug67498.php
<?php
$PHP_SELF = 1;
phpinfo(INFO_VARIABLES);

?>
==DONE==
